samples/_failures_safe/1761522277_18783c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_437741a7.c: In function ‘main’:
./samples/SAFE/__tmp_437741a7.c:147:9: error: ‘destroy’ undeclared (first use in this function)
  147 |         destroy
      |         ^~~~~~~
./samples/SAFE/__tmp_437741a7.c:147:9: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_437741a7.c:147:16: error: expected ‘;’ at end of input
  147 |         destroy
      |                ^
      |                ;
./samples/SAFE/__tmp_437741a7.c:147:9: error: expected declaration or statement at end of input
  147 |         destroy
      |         ^~~~~~~
./samples/SAFE/__tmp_437741a7.c:147:9: error: expected declaration or statement at end of input
